--- a/index.html
+++ b/index.html
@@ -5,23 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link
-      rel="stylesheet"
-      media="screen"
-      href="https://fontlibrary.org//face/chomsky"
-      type="text/css"
-    />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/chomsky" type="text/css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@500;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./assets/css/index-style.css" />
+    <link rel="shortcut icon" href="./assets/img/news.png" type="image/x-icon" />
 
     <title>NMNews</title>
   </head>
@@ -192,7 +182,7 @@
         </label>
         <nav class="container-footer__menu">
           <ul class="container-footer__list">
-            <li class="container-footer__item"><a href="#">Politics</a></li>
+            <li class="container-footer__item"><a href="secondaryNews.html">Politics</a></li>
             <li class="container-footer__item"><a href="#">Sports</a></li>
             <li class="container-footer__item"><a href="#">Business</a></li>
           </ul>
