--- a/subscribe.html
+++ b/subscribe.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="shortcut icon" href="./assets/img/news.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       media="screen"
@@ -94,10 +95,11 @@
         <a href="#" class="contact__button">Entre em contato</a>
       </section>
     </main>
-    <aside></aside>
+    
+    
     <footer>
       <h2 class="footer__brand-logo">
-        <a href="#" class="footer__title"> NMNews</a>
+        <img src="./assets/img/logoNMNews.png" alt="brand logo NMNews" class="lateral-menu__logo" />
       </h2>
       <div class="container-footer">
         <input
@@ -106,13 +108,13 @@
           class="container-footer__button"
         />
         <label for="menu-footer-check01" class="container-footer__label">
-          <span class="footer__menu">noticia teste</span>
+          <span class="footer__menu">News</span>
         </label>
         <nav class="container-footer__menu">
           <ul class="container-footer__list">
-            <li class="container-footer__item"><a href="#">opcao 1</a></li>
-            <li class="container-footer__item"><a href="#">opcao 2</a></li>
-            <li class="container-footer__item"><a href="#">opcao 3</a></li>
+            <li class="container-footer__item"><a href="secondaryNews.html">Politics</a></li>
+            <li class="container-footer__item"><a href="#">Sports</a></li>
+            <li class="container-footer__item"><a href="#">Business</a></li>
           </ul>
         </nav>
       </div>
@@ -123,13 +125,13 @@
           class="container-footer__button"
         />
         <label for="menu-footer-check02" class="container-footer__label">
-          <span class="footer__menu">noticia teste2</span>
+          <span class="footer__menu">Opinion</span>
         </label>
         <nav class="container-footer__menu">
           <ul class="container-footer__list">
-            <li class="container-footer__item"><a href="#">opcao 1</a></li>
-            <li class="container-footer__item"><a href="#">opcao 2</a></li>
-            <li class="container-footer__item"><a href="#">opcao 3</a></li>
+            <li class="container-footer__item"><a href="#">Marcelo Oliveira</a></li>
+            <li class="container-footer__item"><a href="#">Nathan Lubawski</a></li>
+            <li class="container-footer__item"><a href="#">Michael</a></li>
           </ul>
         </nav>
       </div>
@@ -140,13 +142,13 @@
           class="container-footer__button"
         />
         <label for="menu-footer-check03" class="container-footer__label">
-          <span class="footer__menu">noticia teste3</span>
+          <span class="footer__menu">Arts</span>
         </label>
         <nav class="container-footer__menu">
           <ul class="container-footer__list">
-            <li class="container-footer__item"><a href="#">opcao 1</a></li>
-            <li class="container-footer__item"><a href="#">opcao 2</a></li>
-            <li class="container-footer__item"><a href="#">opcao 3</a></li>
+            <li class="container-footer__item"><a href="#">Shows</a></li>
+            <li class="container-footer__item"><a href="#">Exposition</a></li>
+            <li class="container-footer__item"><a href="#">Theaters</a></li>
           </ul>
         </nav>
       </div>
@@ -157,22 +159,23 @@
         </p>
       </div>
       <div class="other-info-footer">
-        <h4 class="other-info-footer__item"><a href="#">teste </a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste </a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste </a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
-        <h4 class="other-info-footer__item"><a href="#">teste</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">NYCto</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Contact Us</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Acessibility</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Work with us</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Advertise</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">T Brand Studio</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Your Ad Choices</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Privacy Policy</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Terms of Service</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Terms of Sale</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Site Map</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Canada</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">International</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Help</a></h4>
+        <h4 class="other-info-footer__item"><a href="#">Substription</a></h4>
       </div>
     </footer>
+
   </body>
 </html>
