--- a/secondaryNews.html
+++ b/secondaryNews.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/chomsky" type="text/css"/>  
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"/>
+    <link rel="shortcut icon" href="./assets/img/news.png" type="image/x-icon" />
     <title>NMNwews | Secondary News</title>
   </head>
   <body>
@@ -104,7 +105,7 @@
           </label>
           <nav class="container-footer__menu">
             <ul class="container-footer__list">
-              <li class="container-footer__item"><a href="#">Politics</a></li>
+              <li class="container-footer__item"><a href="secondaryNews.html">Politics</a></li>
               <li class="container-footer__item"><a href="#">Sports</a></li>
               <li class="container-footer__item"><a href="#">Business</a></li>
             </ul>
