--- a/forms.html
+++ b/forms.html
@@ -84,6 +84,7 @@
                       <option>Morning</option>
                       <option>Afternoon </option>
                       <option>Night</option>
+                      <option>Teste</option>
                   </select>
                </fieldset>
               
