--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </section>
       <section>
         <article class="article__news1">
-          <h3 class="title__news1"><a href="#">Much of Brazil is now wondering: 
+          <h3 class="title__news1"><a href="secondaryNews.html">Much of Brazil is now wondering: 
             Will President Jair Bolsonaro accept his defeat?
             The Latest From Brazil</a></h3>
         </article>
