--- a/secondaryNews.html
+++ b/secondaryNews.html
@@ -45,11 +45,11 @@
         <h2 class="page-title">Brazil Ejects Bolsonaro and Brings Back Leftist Former Leader Lula</h2>
         <h3 class="page-subtitle">Brazilians voted out their far-right leader, Jair Bolsonaro, 
           after a single term and replaced him with former President Luiz Inácio Lula da Silva.</h3>
-        <img src="./assets/img/LulaPresident.png" class="image__adds">
+        <img src="./assets/img/Adds.PNG" class="image__adds">
         <article class="card card--emphasis video-emphasis">
     
-          <img src="assets/img/LulaPresident.png" alt="card banner" class="card__image card__image--mobile"/>
-          <img src="assets/img/banner_1.png" alt="card banner" class="card__image card__image--desktop"/>
+          <img src="./assets/img/LulaPresident.png" alt="card banner" class="card__image card__image--mobile"/>
+          <img src="./assets/img/banner_1.png" alt="card banner" class="card__image card__image--desktop"/>
           <div class="card__content">
             <p class="card__emphasis">Luiz Inácio Lula da Silva, the leftist candidate who was elected president, 
               on the way to vote in São Bernardo do Campo, Brazil, on Sunday.Credit
